[metadata]
name = cilp
version = 1.0
author = Example Author
author_email = code.it.ytb@gmail.com
description = Package de CILP
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/code-it-ytb/CILP-package
project_urls =
    Bug Tracker = https://github.com/code-it-ytb/CILP-package/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.0
[options.packages.find]
where = src
